Challenges/challenge_1_basic_xss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xss2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: yvesei/challenge1:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: xss2
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
  selector:
    app: helloworld
